test_data/Xml/Unexpected/Unserializable/InvalidClassName/environment/wrong.xml.exception
Expected an element representing an instance of class Environment with element name environment, but got: utterlyInvalid at: the beginning